--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Tes</title>
   </head>
   <body>
-    Ini Halaman Tes
+    Ini Halaman Tes <a href="./DesignPortofolio.html">Desain Grafis</a><br>
+    <a href="./ProgramerPortofolio.html">Programer</a>
   </body>
 </html>
