--- a/DesignPortofolio.html
+++ b/DesignPortofolio.html
@@ -1,8 +1,115 @@
-<html>
-  <head>
-    <title>Design Portofolio</title>
-  </head>
-  <body>
-    Ini Halaman Tes
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page Desain Grafis</title>
+    <!-- Tambahkan link CSS Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Sy5CpRZ1SLZf/TGY5m9NcOqGzl7Cq4F5+BS9l8f/EK0nWpX" crossorigin="anonymous">
+</head>
+<body>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" href="#">Desain Grafis</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#services">Layanan</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#portfolio">Portofolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Kontak</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- Jumbotron -->
+<div class="jumbotron text-center">
+    <h1>Selamat Datang di Desain Grafis Kami</h1>
+    <p>Kreativitas Kami, Hasilkan Desain Anda!</p>
+    <a href="#contact" class="btn btn-primary">Hubungi Kami</a>
+</div>
+
+<!-- Layanan -->
+<section id="services" class="py-5">
+    <div class="container">
+        <h2 class="text-center">Layanan Kami</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="graphic-design-service-1.jpg" class="card-img-top" alt="Layanan Desain Grafis 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Desain Logo</h5>
+                        <p class="card-text">Kami menciptakan logo yang unik dan menggambarkan identitas bisnis Anda.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="graphic-design-service-2.jpg" class="card-img-top" alt="Layanan Desain Grafis 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Desain Brosur</h5>
+                        <p class="card-text">Brosur berkualitas tinggi untuk mempromosikan produk atau layanan Anda.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="graphic-design-service-3.jpg" class="card-img-top" alt="Layanan Desain Grafis 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Desain Media Sosial</h5>
+                        <p class="card-text">Kami menciptakan konten visual menarik untuk media sosial Anda.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Portofolio -->
+<section id="portfolio" class="bg-light py-5">
+    <div class="container">
+        <h2 class="text-center">Portofolio Kami</h2>
+        <!-- Tambahkan gambar-gambar portofolio Anda di sini -->
+    </div>
+</section>
+
+<!-- Kontak -->
+<section id="contact" class="py-5">
+    <div class="container">
+        <h2 class="text-center">Hubungi Kami</h2>
+        <div class="row">
+            <div class="col-md-6 mx-auto">
+                <form>
+                    <div class="mb-3">
+                        <label for="nama" class="form-label">Nama</label>
+                        <input type="text" class="form-control" id="nama" placeholder="Nama Anda">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Email Anda">
+                    </div>
+                    <div class="mb-3">
+                        <label for="pesan" class="form-label">Pesan</label>
+                        <textarea class="form-control" id="pesan" rows="4" placeholder="Tulis pesan Anda di sini"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Kirim Pesan</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Tambahkan link JavaScript Bootstrap di bawah ini (sebelum penutup </body>) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-f2FiFpOCremtzjOtCqzWYA4W5J/rt7abC6Bp5EOBxk2OKw5f5z3fpF5w5f5w5f5w5f5w" crossorigin="anonymous"></script>
+</body>
 </html>
