--- a/DesignPortofolio.html
+++ b/DesignPortofolio.html
@@ -6,6 +6,16 @@
     <title>Landing Page Desain Grafis</title>
     <!-- Tambahkan link CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Sy5CpRZ1SLZf/TGY5m9NcOqGzl7Cq4F5+BS9l8f/EK0nWpX" crossorigin="anonymous">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        body {
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
 <body>
 
