--- a/DesignPortofolio.html
+++ b/DesignPortofolio.html
@@ -19,6 +19,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
+                    <a class="nav-link" href="./">Beranda</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#services">Layanan</a>
                 </li>
                 <li class="nav-item">
