--- a/index.html
+++ b/index.html
@@ -1,9 +1,62 @@
-<html>
-  <head>
-    <title>Tes</title>
-  </head>
-  <body>
-    Ini Halaman Tes <a href="./DesignPortofolio.html">Desain Grafis</a><br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Information</title>
+    <!-- Menghubungkan Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">My Personal Page</a>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <header class="hero bg-primary text-white text-center py-5">
+        <div class="container">
+            <h1 class="display-4">Halo, Saya [Nama Anda]</h1>
+            <p class="lead">Saya adalah seorang [Pekerjaan Anda] dengan minat dalam [Minat Anda].</p>
+        </div>
+    </header>
+
+    <!-- About Section -->
+    <section class="about py-5">
+        <div class="container">
+            <h2>Tentang Saya</h2>
+            <p>Saya adalah seorang [Pekerjaan Anda] dengan pengalaman lebih dari [Jumlah Tahun Pengalaman] tahun. Saya memiliki minat dalam [Minat atau Hobi Anda], dan saya senang berkontribusi dalam [Bidang atau Industri Anda].</p>
+          <a href="./DesignPortofolio.html">Desain Grafis</a><br>
     <a href="./ProgramerPortofolio.html">Programer</a>
-  </body>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact py-5 bg-light">
+        <div class="container">
+            <h2>Kontak Saya</h2>
+            <p>Jika Anda ingin menghubungi saya, Anda dapat menggunakan formulir kontak di bawah ini:</p>
+            <form>
+                <div class="mb-3">
+                    <label for="nama" class="form-label">Nama</label>
+                    <input type="text" class="form-control" id="nama" placeholder="Masukkan nama Anda">
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="Masukkan email Anda">
+                </div>
+                <div class="mb-3">
+                    <label for="pesan" class="form-label">Pesan</label>
+                    <textarea class="form-control" id="pesan" rows="4" placeholder="Tulis pesan Anda"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Kirim Pesan</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Menghubungkan Bootstrap JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
