--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <!-- Hero Section -->
     <header class="hero bg-primary text-white text-center py-5">
         <div class="container">
-            <h1 class="display-4">Halo, Saya [Nama Anda]</h1>
-            <p class="lead">Saya adalah seorang [Pekerjaan Anda] dengan minat dalam [Minat Anda].</p>
+            <h1 class="display-4">Halo, Saya Salim Hidayat</h1>
+            <p class="lead">Saya adalah seorang Freelance dengan minat dalam Desain Grafis Dan Programing.</p>
         </div>
     </header>
 
@@ -27,7 +27,7 @@
     <section class="about py-5">
         <div class="container">
             <h2>Tentang Saya</h2>
-            <p>Saya adalah seorang [Pekerjaan Anda] dengan pengalaman lebih dari [Jumlah Tahun Pengalaman] tahun. Saya memiliki minat dalam [Minat atau Hobi Anda], dan saya senang berkontribusi dalam [Bidang atau Industri Anda].</p>
+            <p>Saya adalah seorang Mahasiswa yang sedang mencari pengalaman dalam dunia kerja. Saya memiliki minat dalam Desain Grafis dan Programing, dan saya akan senang bila bisa berkontribusi dalam Industri Anda.</p>
           <a href="./DesignPortofolio.html">Desain Grafis</a><br>
     <a href="./ProgramerPortofolio.html">Programer</a>
         </div>
