--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <h2>Tentang Saya</h2>
             <p>Saya adalah seorang Mahasiswa yang sedang mencari pengalaman dalam dunia kerja. Saya memiliki minat dalam Desain Grafis dan Programing, dan saya akan senang bila bisa berkontribusi dalam Industri Anda.</p>
-          <a href="./DesignPortofolio.html" class="btn btn-primary py-5">Desain Grafis</a>
+          <a href="./DesignPortofolio.html" class="btn btn-primary m-3">Desain Grafis</a>
     <a href="./ProgramerPortofolio.html" class="btn btn-warning">Programer</a>
         </div>
     </section>
