--- a/ProgramerPortofolio.html
+++ b/ProgramerPortofolio.html
@@ -11,7 +11,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">ProgrammerPro</a>
+            <a class="navbar-brand" href="#">Portofolio Programmer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -21,7 +21,7 @@
                         <a class="nav-link" href="./">Beranda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tentang Kami</a>
+                        <a class="nav-link" href="#">Tentang Saya</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kontak</a>
@@ -34,9 +34,9 @@
     <!-- Hero Section -->
     <header class="hero bg-primary text-white text-center py-5">
         <div class="container">
-            <h1 class="display-4">Selamat Datang di ProgrammerPro</h1>
-            <p class="lead">Menghubungkan Programmer Terbaik dengan Proyek Anda</p>
-            <a href="#" class="btn btn-light btn-lg">Mulai Sekarang</a>
+            <h1 class="display-4">Selamat Datang di Portofolio Programmer Saya</h1>
+            <p class="lead">Siap Membantu Anda Dalam Mengerjakan Proyek Anda Miliki Dan Dalam Bahasa Apapun</p>
+            <a href="#" class="btn btn-light btn-lg">Hubungi Sekarang</a>
         </div>
     </header>
 
@@ -47,8 +47,9 @@
                 <div class="col-lg-4">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h5 class="card-title">Programmer Ahli</h5>
-                            <p class="card-text">Kami memiliki jaringan programmer ahli dalam berbagai bahasa pemrograman.</p>
+                            <h5 class="card-title">Berbagai Bahasa Pemrograman Yang Dikuasai</h5>
+                            <p class="card-text">Saya memiliki kemampuan programmer dalam berbagai bahasa pemrograman, Diantaranya, Pemrograman Web(Html, Css, Dan Javascript), C, C++, C#, Python, Java, Visual basic.
+                            Dan mungkin kedepannya akan bertambah seiring berjalan nya waktu</p>
                         </div>
                     </div>
                 </div>
@@ -56,15 +57,15 @@
                     <div class="card mb-4">
                         <div class="card-body">
                             <h5 class="card-title">Proyek Kustom</h5>
-                            <p class="card-text">Kami dapat membantu Anda dalam proyek kustom sesuai dengan kebutuhan Anda.</p>
+                            <p class="card-text">Saya dapat membantu Anda dalam proyek kustom sesuai dengan kebutuhan Anda.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h5 class="card-title">Dukungan 24/7</h5>
-                            <p class="card-text">Tim dukungan kami siap membantu Anda kapan saja.</p>
+                            <h5 class="card-title">Dukungan (20:00 - 02:00)</h5>
+                            <p class="card-text">Saya siap membantu Anda sesuai waktu yang tertera diatas.</p>
                         </div>
                     </div>
                 </div>
@@ -77,8 +78,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Hubungi Kami</h2>
-                    <p>Jika Anda memiliki pertanyaan, jangan ragu untuk menghubungi kami.</p>
+                    <h2>Hubungi Saya</h2>
+                    <p>Jika Anda memiliki pertanyaan, jangan ragu untuk menghubungi Saya.</p>
                 </div>
                 <div class="col-lg-6">
                     <form>
