--- a/DesignPortofolio.html
+++ b/DesignPortofolio.html
@@ -12,7 +12,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="#">Desain Grafis</a>
+        <a class="navbar-brand" href="#">Portofolio Desain Grafis</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,22 +37,22 @@
 
 <!-- Jumbotron -->
 <div class="jumbotron text-center">
-    <h1>Selamat Datang di Desain Grafis Kami</h1>
-    <p>Kreativitas Kami, Hasilkan Desain Anda!</p>
-    <a href="#contact" class="btn btn-primary">Hubungi Kami</a>
+    <h1>Selamat Datang di Portofolio Desain Grafis Saya</h1>
+    <p>Kreativitas Saya, Hasilkan Desain Anda!</p>
+    <a href="#contact" class="btn btn-primary">Hubungi Saya</a>
 </div>
 
 <!-- Layanan -->
 <section id="services" class="py-5">
     <div class="container">
-        <h2 class="text-center">Layanan Kami</h2>
+        <h2 class="text-center">Layanan Saya</h2>
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4">
                     <img src="graphic-design-service-1.jpg" class="card-img-top" alt="Layanan Desain Grafis 1">
                     <div class="card-body">
                         <h5 class="card-title">Desain Logo</h5>
-                        <p class="card-text">Kami menciptakan logo yang unik dan menggambarkan identitas bisnis Anda.</p>
+                        <p class="card-text">Saya menciptakan logo yang unik dan menggambarkan identitas bisnis Anda.</p>
                     </div>
                 </div>
             </div>
@@ -69,8 +69,8 @@
                 <div class="card mb-4">
                     <img src="graphic-design-service-3.jpg" class="card-img-top" alt="Layanan Desain Grafis 3">
                     <div class="card-body">
-                        <h5 class="card-title">Desain Media Sosial</h5>
-                        <p class="card-text">Kami menciptakan konten visual menarik untuk media sosial Anda.</p>
+                        <h5 class="card-title">Coming Soon</h5>
+                        <p class="card-text">Lorem Ipsum Dolor Sit Amet.</p>
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
 <!-- Portofolio -->
 <section id="portfolio" class="bg-light py-5">
     <div class="container">
-        <h2 class="text-center">Portofolio Kami</h2>
+        <h2 class="text-center">Portofolio Saya</h2>
         <!-- Tambahkan gambar-gambar portofolio Anda di sini -->
     </div>
 </section>
@@ -89,7 +89,7 @@
 <!-- Kontak -->
 <section id="contact" class="py-5">
     <div class="container">
-        <h2 class="text-center">Hubungi Kami</h2>
+        <h2 class="text-center">Hubungi Saya</h2>
         <div class="row">
             <div class="col-md-6 mx-auto">
                 <form>
