--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
 
     <!-- Menghubungkan Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
