--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
                 <button type="submit" class="btn btn-primary">Kirim Pesan</button>
             </form>
         </div>
+        <a href="./js/main.js">tes</a>
     </section>
 
     <!-- Menghubungkan Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
