--- a/index.html
+++ b/index.html
@@ -37,22 +37,13 @@
     <section class="contact py-5 bg-light">
         <div class="container">
             <h2>Kontak Saya</h2>
-            <p>Jika Anda ingin menghubungi saya, Anda dapat menggunakan formulir kontak di bawah ini:</p>
-            <form>
-                <div class="mb-3">
-                    <label for="nama" class="form-label">Nama</label>
-                    <input type="text" class="form-control" id="nama" placeholder="Masukkan nama Anda">
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Masukkan email Anda">
-                </div>
-                <div class="mb-3">
-                    <label for="pesan" class="form-label">Pesan</label>
-                    <textarea class="form-control" id="pesan" rows="4" placeholder="Tulis pesan Anda"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Kirim Pesan</button>
-            </form>
+            <ul>
+                <li>Facebook</li>
+                <li>Instagram</li>
+                <li>Twitter(X)</li>
+                <li>Telegram</li>
+                <li>Whatsapp</li>
+            </ul>
         </div>
         <a href="./js/main.js">tes</a>
     </section>
