--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- About Section -->
     <section class="about py-5">
         <div class="container">
-            <h2>Tentang Saya</h2>
+            <h2>Keahlian Saya</h2>
             <p>Saya adalah seorang Mahasiswa yang sedang mencari pengalaman dalam dunia kerja. Saya memiliki minat dalam Desain Grafis dan Programing, dan saya akan senang bila bisa berkontribusi dalam Industri Anda.</p>
             <div class="container">
                 <a href="./DesignPortofolio.html" class="btn btn-primary m-3">Desain Grafis</a>
